# drf-haystack

./: .pre-commit-config.yaml  .travis.yml  Dockerfile  Pipfile  README.md  docker-compose.yml  ez_setup.py  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: docs.yaml  prek.yml  test.yaml  tests.yaml
docs/: 01_intro.rst  02_autocomplete.rst  conf.py  index.rst  rtd_requirements.txt
drf_haystack/: __init__.py  fields.py  filters.py  generics.py  mixins.py  query.py  serializers.py  utils.py  viewsets.py
tests/: __init__.py  apps.py  constants.py  mixins.py  run_tests.py  settings.py  test_filters.py  test_serializers.py  test_utils.py  test_viewsets.py  urls.py  wsgi.py
tests/mockapp/: models.py  search_indexes.py  serializers.py  views.py
tests/mockapp/migrations/: 0001_initial.py  0002_mockperson.py  0003_mockpet.py  0004_load_fixtures.py  0005_mockperson_birthdate.py  0006_mockallfield.py
tests/mockapp/templates/search/indexes/mockapp/: mocklocation_text.txt
